--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Button x:Name="btnGo" Content="開始" HorizontalAlignment="Left" Height="28" Margin="263,136,0,0" VerticalAlignment="Top" Width="66" Click="btnGo_Click"/>
+        <TextBox x:Name="txtShow" HorizontalAlignment="Left" Height="28" Margin="140,136,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="98"/>
+
     </Grid>
 </Window>
